correct layout breakpoints

--- a/_sass/atha-design.scss
+++ b/_sass/atha-design.scss
@@ -193,6 +193,13 @@ p {
     /* Medium devices (landscape tablets, 768px and up) */
 
 
+    .contentContainer {
+       max-width: 85%;
+    }
+
+
+
+
     .contentHeader__title {
         font-size: 3em;
     }
@@ -248,7 +255,8 @@ p {
 
 
     .contentContainer {
-        max-width: 85%;
+        max-width: 1100px;
+        // max-width: 85%;
         margin: 50px auto 0 auto;
         border: 2px solid rgba(0,0,0,.1);
 
